--- a/style1.css
+++ b/style1.css
@@ -1,31 +1,54 @@
 body {
-    background-color: rgb(32, 32, 32);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #0d1013;
+    color: #e8e4d4;
+    font-family: Italiana, serif;
+}
+
+.intro {
+    font-size: 16vw;
+    line-height: 14vw;
     text-align: center;
+    text-transform: uppercase;
+    margin: 0;
 }
 
-.animate-character {
-    background-image: linear-gradient( -225deg, #231557 0%, #44107a 29%, #ff1361 67%, #fff800 100%);
-    background-size: auto auto;
-    background-clip: border-box;
-    background-size: 200% auto;
-    color: #fff;
-    background-clip: text;
-    text-fill-color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: textclip 2s linear infinite;
-    display: inline-block;
-    font-size: 120px;
+#amph {
+    font-family: 'Amphibian', serif;
+    font-weight: 100;
 }
 
-@keyframes textclip {
-    to {
-        background-position: 200% center;
-    }
+.meet {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 4vw;
+    font-family: sans-serif;
+    color: lightblue;
+    font-weight: 350;
+    margin: 20vh;
 }
 
-.container {
-    padding-top: 20%;
-    margin: auto;
+.footer {
+    bottom: 0;
+    text-align: center;
+    height: 5vh;
+    font-size: 2.1vw;
+}
+
+.link {
+    position: relative;
+    color: #e8e4d4;
+    font-size: 2vw;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.link:hover {
+    color: #fe6610;
+    text-decoration: underline;
+}
+
+.footer-elements {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
