--- a/style1.css
+++ b/style1.css
@@ -2,9 +2,10 @@ body {
     background-color: #0d1013;
     color: #e8e4d4;
     font-family: Playfair Display, serif;
-    margin: 2vw;
+    margin: 2vh 2vw 2vmin;
     text-align: center;
     font-size: 4vmin;
+    cursor: url("smiley_face.cur"), auto;
 }
 
 .intro {
