--- a/style1.css
+++ b/style1.css
@@ -16,11 +16,12 @@ body {
   font-size: 9vw;
   text-transform: uppercase;
   font-family: Italiana, serif;
-  margin-bottom: 6vh;
+  margin-bottom: 0;
   margin-top: 0;
 }
 h1 {
   margin-top: 0;
+  margin-bottom: 0;
 }
 a {
   color: rgb(173, 193, 230);
@@ -37,8 +38,8 @@ h2 {
   font-weight: normal;
   margin: 0;
 }
-.connect {
-  margin-top: 6vh;
+.about {
+    margin: 12vh 0;
 }
 
 p {
